--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
         //urls
         buildConfigField('String', 'base_url', '\"https://test.com\"')
         buildConfigField('String', 'red5pro_license_key', '\"DBEB-NOSU-DWVI-C55J\"')
+        buildConfigField('String', 'streaming_server_host','\"34.246.43.20\"') //192.168.8.100
+        buildConfigField('int', 'streaming_server_port','5080')
     }
     buildTypes {
         release {
